--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,3 +159,58 @@ h2 {
     padding: 0;
     margin: 0;
 }
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 70px;
+}
+
+.call-to-action div {
+    background-color: var(--blue);
+    color: var(--secondary_text);
+    width: 70%;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: flex-start;
+    border-radius: 5px;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
+}
+
+.text p, .text h3 {
+    margin: 0;
+    padding: 0;
+}
+
+.text h3 {
+    font-weight: bold;
+}
+
+.call-to-action button {
+    align-self: center;
+    border: 2px solid var(--secondary_text);
+    border-radius: 5px;
+    color: var(--secondary_text);
+    background-color: var(--blue);
+    padding: 5px;
+    width: 100px;
+}
+
+footer {
+    background-color: var(--dark_background);
+    color: var(--secondary_text);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+}
